AlgoritmiaParser.py
# Generated from Algoritmia.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AlgoritmiaParser ( Parser ):

    grammarFileName = "Algoritmia.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'|:'", "':|'", "'<-'", "'<?>'", "'<w>'", 
                     "'(:)'", "'if'", "'else'", "'while'", "'<<'", "'8<'", 
                     "'['", "']'", "'*'", "'/'", "'%'", "'+'", "'-'", "'='", 
                     "'/='", "'<'", "'>'", "'<='", "'>='", "'('", "')'", 
                     "'#'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "NOTE", "NUM", "STRING", 
                      "COMMENT", "WS" ]

    RULE_root = 0
    RULE_procedure = 1
    RULE_params = 2
    RULE_block = 3
    RULE_statement = 4
    RULE_assignment = 5
    RULE_read = 6
    RULE_write = 7
    RULE_writeParam = 8
    RULE_play = 9
    RULE_conditional = 10
    RULE_iteration = 11
    RULE_procCall = 12
    RULE_listAppend = 13
    RULE_listCut = 14
    RULE_expr = 15

    ruleNames =  [ "root", "procedure", "params", "block", "statement", 
                   "assignment", "read", "write", "writeParam", "play", 
                   "conditional", "iteration", "procCall", "listAppend", 
                   "listCut", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    ID=30
    NOTE=31
    NUM=32
    STRING=33
    COMMENT=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AlgoritmiaParser.EOF, 0)

        def procedure(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ProcedureContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ProcedureContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = AlgoritmiaParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.procedure()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==30):
                    break

            self.state = 37
            self.match(AlgoritmiaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AlgoritmiaParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(AlgoritmiaParser.BlockContext,0)


        def params(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ParamsContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_procedure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedure" ):
                listener.enterProcedure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedure" ):
                listener.exitProcedure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedure" ):
                return visitor.visitProcedure(self)
            else:
                return visitor.visitChildren(self)




    def procedure(self):

        localctx = AlgoritmiaParser.ProcedureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_procedure)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(AlgoritmiaParser.ID)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 40
                self.params()


            self.state = 43
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.ID)
            else:
                return self.getToken(AlgoritmiaParser.ID, i)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = AlgoritmiaParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 45
                self.match(AlgoritmiaParser.ID)
                self.state = 48 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==30):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.StatementContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.StatementContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = AlgoritmiaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(AlgoritmiaParser.T__0)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1073744624) != 0):
                self.state = 51
                self.statement()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(AlgoritmiaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(AlgoritmiaParser.AssignmentContext,0)


        def read(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ReadContext,0)


        def write(self):
            return self.getTypedRuleContext(AlgoritmiaParser.WriteContext,0)


        def play(self):
            return self.getTypedRuleContext(AlgoritmiaParser.PlayContext,0)


        def conditional(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ConditionalContext,0)


        def iteration(self):
            return self.getTypedRuleContext(AlgoritmiaParser.IterationContext,0)


        def procCall(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ProcCallContext,0)


        def listAppend(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ListAppendContext,0)


        def listCut(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ListCutContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = AlgoritmiaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.read()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.write()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 62
                self.play()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 63
                self.conditional()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 64
                self.iteration()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 65
                self.procCall()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 66
                self.listAppend()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 67
                self.listCut()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AlgoritmiaParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = AlgoritmiaParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(AlgoritmiaParser.ID)
            self.state = 71
            self.match(AlgoritmiaParser.T__2)
            self.state = 72
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AlgoritmiaParser.ID, 0)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_read

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead" ):
                listener.enterRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead" ):
                listener.exitRead(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)




    def read(self):

        localctx = AlgoritmiaParser.ReadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_read)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(AlgoritmiaParser.T__3)
            self.state = 75
            self.match(AlgoritmiaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def writeParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.WriteParamContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.WriteParamContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_write

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite" ):
                listener.enterWrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite" ):
                listener.exitWrite(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)




    def write(self):

        localctx = AlgoritmiaParser.WriteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_write)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(AlgoritmiaParser.T__4)
            self.state = 79 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 78
                    self.writeParam()

                else:
                    raise NoViableAltException(self)
                self.state = 81 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def STRING(self):
            return self.getToken(AlgoritmiaParser.STRING, 0)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_writeParam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteParam" ):
                listener.enterWriteParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteParam" ):
                listener.exitWriteParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteParam" ):
                return visitor.visitWriteParam(self)
            else:
                return visitor.visitChildren(self)




    def writeParam(self):

        localctx = AlgoritmiaParser.WriteParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_writeParam)
        try:
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25, 27, 28, 30, 31, 32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.expr(0)
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.match(AlgoritmiaParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_play

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlay" ):
                listener.enterPlay(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlay" ):
                listener.exitPlay(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlay" ):
                return visitor.visitPlay(self)
            else:
                return visitor.visitChildren(self)




    def play(self):

        localctx = AlgoritmiaParser.PlayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_play)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(AlgoritmiaParser.T__5)
            self.state = 88
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.BlockContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.BlockContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_conditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional" ):
                listener.enterConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional" ):
                listener.exitConditional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional" ):
                return visitor.visitConditional(self)
            else:
                return visitor.visitChildren(self)




    def conditional(self):

        localctx = AlgoritmiaParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_conditional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(AlgoritmiaParser.T__6)
            self.state = 91
            self.expr(0)
            self.state = 92
            self.block()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 93
                self.match(AlgoritmiaParser.T__7)
                self.state = 94
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IterationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(AlgoritmiaParser.BlockContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_iteration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIteration" ):
                listener.enterIteration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIteration" ):
                listener.exitIteration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIteration" ):
                return visitor.visitIteration(self)
            else:
                return visitor.visitChildren(self)




    def iteration(self):

        localctx = AlgoritmiaParser.IterationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_iteration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(AlgoritmiaParser.T__8)
            self.state = 98
            self.expr(0)
            self.state = 99
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AlgoritmiaParser.ID, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ExprContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_procCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcCall" ):
                listener.enterProcCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcCall" ):
                listener.exitProcCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcCall" ):
                return visitor.visitProcCall(self)
            else:
                return visitor.visitChildren(self)




    def procCall(self):

        localctx = AlgoritmiaParser.ProcCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_procCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(AlgoritmiaParser.ID)
            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 102
                    self.expr(0) 
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListAppendContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AlgoritmiaParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_listAppend

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListAppend" ):
                listener.enterListAppend(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListAppend" ):
                listener.exitListAppend(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListAppend" ):
                return visitor.visitListAppend(self)
            else:
                return visitor.visitChildren(self)




    def listAppend(self):

        localctx = AlgoritmiaParser.ListAppendContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_listAppend)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(AlgoritmiaParser.ID)
            self.state = 109
            self.match(AlgoritmiaParser.T__9)
            self.state = 110
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListCutContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AlgoritmiaParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_listCut

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListCut" ):
                listener.enterListCut(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListCut" ):
                listener.exitListCut(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListCut" ):
                return visitor.visitListCut(self)
            else:
                return visitor.visitChildren(self)




    def listCut(self):

        localctx = AlgoritmiaParser.ListCutContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_listCut)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(AlgoritmiaParser.T__10)
            self.state = 113
            self.match(AlgoritmiaParser.ID)
            self.state = 114
            self.match(AlgoritmiaParser.T__11)
            self.state = 115
            self.expr(0)
            self.state = 116
            self.match(AlgoritmiaParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ListSizeContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmiaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(AlgoritmiaParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListSize" ):
                listener.enterListSize(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListSize" ):
                listener.exitListSize(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListSize" ):
                return visitor.visitListSize(self)
            else:
                return visitor.visitChildren(self)


    class ParenthesisContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmiaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenthesis" ):
                listener.enterParenthesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenthesis" ):
                listener.exitParenthesis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthesis" ):
                return visitor.visitParenthesis(self)
            else:
                return visitor.visitChildren(self)


    class ListLiteralContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmiaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ExprContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListLiteral" ):
                listener.enterListLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListLiteral" ):
                listener.exitListLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListLiteral" ):
                return visitor.visitListLiteral(self)
            else:
                return visitor.visitChildren(self)


    class MulDivModContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmiaParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ExprContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDivMod" ):
                listener.enterMulDivMod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDivMod" ):
